--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,29 @@
 #precip {
-    width: 60px
+    width: 30px
 }
 
 span {
     display: inline-grid;
-    font-size: 20px;
+    font-size: 30px;
     align-items: center;
+    text-align: center
+}
+
+#input {
+    margin: 0 auto;
+    padding-top: 10px;
+    padding-bottom: 10px;
     text-align: center;
+}
+
+#current-conditions {
+    margin: auto; 
+    width: 500; 
+    text-align: center
+}
+
+#forecast {
+    display: flex; 
+    flex-direction: row;
+    color: white
 }
